--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "express-pino-logger": "^7.0.0",
     "firebase": "8.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "^3.0.1",
     "react-swipeable-views": "^0.14.0",
+    "twilio": "^5.0.4",
     "twilio-video": "^2.28.1",
     "web-vitals": "^2.1.4"
   },
